syntax = "proto3";

package m2m_api;

service M2M {
    rpc Reserve(Stream) returns (Ack);
    rpc SyncProvenance(StreamProv) returns (Ack);
}


message StreamProv {
    string local_socket = 1;
    string peer_socket = 2;
    repeated ComplianceLabel provenance = 3;
}

message ComplianceLabel {
    Id identifier = 1;
    bool local_confidentiality = 2;
    bool local_integrity = 3;
}

message Id {
    string node = 1;
    Resource resource = 2;
}

message Resource {
    oneof variant {
        File file = 1;
        Stream stream = 2;
        Process process = 3;
    }
}

message File {
    string path = 1;
}

message Stream {
    string local_socket = 1;
    string peer_socket = 2;
} 

message Process {
    uint32 pid = 1;
    uint64 starttime = 2;
    string exe_path = 3;
}

message Ack {
}